--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,3 +1,7 @@
+:root {
+  --c-success: #00e396;
+}
+
 .badge {
   padding: 1.3rem 1.6rem;
   background-color: var(--c-active);
@@ -39,7 +43,7 @@
 }
 
 .form-radio.radio-checked {
-  border-color: #00e396;
+  border-color: var(--c-success);
 }
 
 .blue-theme {
