--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -31,7 +31,7 @@
 .form-radio {
   height: 2.8rem;
   min-width: 2.8rem;
-  border-width: 6px;
+  border-width: 0.6rem;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.1);
   border-radius: 50%;
