--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,7 @@ button {
 
 .layer {
   background-color: var(--c-white);
+  color: var(--c-contrast);
 }
 
 @media screen and (max-width: 768px) {
