--- a/src/pages/Products/Vault/Vault.css
+++ b/src/pages/Products/Vault/Vault.css
@@ -1,3 +1,7 @@
+:root {
+  --c-heat: #fa124f;
+}
+
 .vault {
   background-color: var(--c-black);
   color: var(--c-white);
@@ -6,7 +10,6 @@
 .activity {
   height: 8rem;
   width: 8rem;
-  margin-top: 1.6rem;
 }
 
 .ring {
@@ -17,7 +20,7 @@
 .completed {
   animation: progress 1s ease-in-out forwards;
   stroke-linecap: round;
-  stroke: #fa124f;
+  stroke: var(--c-heat);
 }
 
 .background {
@@ -32,8 +35,39 @@ circle {
   r: 15.915;
 }
 
+.conditions {
+  margin-top: 1.6rem;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 1.6rem;
+}
+
+.context {
+  grid-column: span 5;
+}
+
+.term {
+  color: rgba(235, 235, 245, 0.6);
+}
+
+.sum {
+  font-size: 2.8rem;
+  margin: 0.4rem 0;
+}
+
+.accrued {
+  color: var(--c-heat);
+  font-size: var(--s-medium);
+}
+
 @keyframes progress {
   0% {
     stroke-dasharray: 0 100;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .conditions {
+    grid-template-columns: repeat(5, 1fr);
   }
 }
