--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --c-primary: #c1deba;
   --c-warning: #fbf3eb;
   --c-contrast: #232526;
-  --c-ring: #008ffb;
+  --c-ring: #0072ea;
   --s-ellipse: 5rem;
   --s-medium: 2rem;
   --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
