Create privacy policy page

--- a/src/pages/Products/DialogContent/DialogContent.css
+++ b/src/pages/Products/DialogContent/DialogContent.css
@@ -20,6 +20,10 @@
   animation: alert-enter ease-in-out 0.2s;
 }
 
+.dialog-action {
+  margin-bottom: 1.6rem;
+}
+
 @keyframes alert-enter {
   0% {
     opacity: 0.01;
