--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,7 +21,7 @@ button {
 
 .btn:hover {
   filter: var(--p-shadow);
-  background-color: var(--c-dark);
+  background-color: var(--c-contrast);
   color: var(--c-white);
 }
 
