--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --c-black: #1c1c1e;
   --c-white: #fff;
-  --c-dark: rgba(30, 30, 30, 0.75);
+  --c-dark: rgba(0, 0, 0, 0.2);
   --c-active: rgba(0, 0, 0, 0.05);
   --c-secondary: rgba(255, 255, 255, 0.52);
   --c-glass: rgba(245, 245, 245, 0.5);
@@ -13,7 +13,7 @@
   --s-medium: 2rem;
   --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   --p-blur: blur(80px);
-  --p-shadow: drop-shadow(0px 20px 30px rgba(0, 0, 0, 0.2));
+  --p-shadow: drop-shadow(0px 20px 30px var(--c-dark));
 }
 
 html {
