--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,14 +2,14 @@
   background-color: var(--c-warning);
 }
 
-.slide {
-  animation: slide 1s ease-in-out infinite;
-  transition: transform 0.3s;
+.home-stats {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1.4rem;
 }
 
 .tour {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-column: span 2;
 }
 
 .tour-list {
@@ -28,7 +28,7 @@
 }
 
 .tour-indicators {
-  justify-content: space-around;
+  max-width: 32rem;
 }
 
 .chip {
@@ -38,29 +38,8 @@
   font-size: inherit;
 }
 
-.home-stats {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-}
-
 @media screen and (max-width: 768px) {
-  .tour {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
   .home-stats {
     grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-@keyframes slide {
-  0%,
-  100% {
-    transform: translateX(-15px);
-  }
-
-  50% {
-    transform: translateX(-30px);
   }
 }
