--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,7 @@ button {
   font-size: 1.6rem;
   transition: filter 0.25s, transform 0.4s var(--a-press),
     background-color 0.25s;
-  border-radius: 2.4rem;
+  border-radius: var(--s-dock);
   text-align: center;
 }
 
@@ -42,4 +42,9 @@ button {
   height: 3.4rem;
   width: 3.4rem;
   border-radius: 50%;
+  transition: background-color 0.25s;
+}
+
+.backward:hover {
+  background-color: var(--c-secondary);
 }
