--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,16 @@
   --c-dark: rgba(0, 0, 0, 0.2);
   --c-active: rgba(0, 0, 0, 0.05);
   --c-secondary: rgba(255, 255, 255, 0.52);
-  --c-glass: rgba(245, 245, 245, 0.5);
+  --c-glass: rgba(245, 245, 245, 0.4);
   --c-primary: #c1deba;
   --c-warning: #fbf3eb;
   --c-contrast: #232526;
   --c-ring: #0072ea;
-  --s-ellipse: 5rem;
+  --s-ellipse: 5.4rem;
   --s-medium: 2rem;
+  --s-dock: 2.3rem;
   --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  --p-blur: blur(80px);
+  --p-blur: blur(80px) saturate(160%);
   --p-shadow: drop-shadow(0px 20px 30px var(--c-dark));
 }
 
@@ -34,7 +35,7 @@ body {
   font-size: 1.4rem;
   background-color: var(--c-primary);
   min-height: 100vh;
-  padding: 1rem 0.8rem 10.6rem;
+  padding: 1rem 0.8rem 10.8rem;
 }
 
 a {
@@ -113,14 +114,14 @@ button {
   padding: var(--s-medium);
 }
 
-.page {
-  background-color: var(--c-secondary);
+.depth {
+  background-color: var(--c-glass);
   backdrop-filter: var(--p-blur);
   color: var(--c-black);
 }
 
-.page:not(:last-child) {
-  margin-bottom: 2.4rem;
+.screen {
+  margin-top: 2.6rem;
 }
 
 .fixed-bottom {
@@ -132,9 +133,8 @@ button {
 
 .dock {
   max-width: 58rem;
-  background-color: var(--c-glass);
-  backdrop-filter: var(--p-blur);
   padding: 1.6rem;
+  border-radius: var(--s-dock);
 }
 
 .layer {
