--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --s-ellipse: 5.4rem;
   --s-medium: 2rem;
   --s-dock: 2.3rem;
+  --s-system: 1.4rem;
   --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   --p-blur: blur(80px) saturate(160%);
   --p-shadow: drop-shadow(0px 20px 30px var(--c-dark));
@@ -32,7 +33,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1.4rem;
+  font-size: var(--s-system);
   background-color: var(--c-primary);
   min-height: 100vh;
   padding: 1rem 0.8rem 10.8rem;
@@ -82,7 +83,7 @@ button {
 
 .info {
   line-height: 2.4rem;
-  margin: 1.4rem 0 2rem;
+  margin: var(--s-system) 0 2rem;
 }
 
 .subtitle {
@@ -166,7 +167,7 @@ button {
 
 @media screen and (max-width: 768px) {
   .view {
-    padding: 1.6rem 1.4rem;
+    padding: 1.6rem var(--s-system);
   }
 
   .title {
