--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,7 +5,7 @@
 .home-stats {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1.4rem;
+  grid-gap: var(--s-system);
 }
 
 .tour {
