Finally found a golden mean for monochrome

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
   --c-dark: rgba(0, 0, 0, 0.2);
   --c-active: rgba(0, 0, 0, 0.05);
   --c-secondary: #2c2c2e;
-  --c-glass: rgba(245, 245, 245, 0.5);
+  --c-glass: rgba(255, 255, 255, 0.72);
   --c-primary: #f5f5f7;
   --c-action: rgba(118, 118, 128, 0.2);
+  --c-depth: rgba(245, 245, 245, 0.46);
   --c-contrast: #151516;
   --c-ring: #0066cc;
   --c-grey: #a1a1a6;
@@ -16,7 +17,7 @@
   --s-system: 1.4rem;
   --s-unit: 0.8rem;
   --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  --p-blur: blur(80px) saturate(160%);
+  --p-blur: blur(20px) saturate(180%);
   --p-shadow: drop-shadow(0px 20px 30px var(--c-dark));
 }
 
@@ -36,9 +37,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: var(--s-system);
-  background-color: var(--c-white);
+  background-color: var(--c-primary);
   min-height: 100vh;
-  padding-bottom: 9rem;
+  padding-bottom: 9.2rem;
 }
 
 a {
@@ -115,9 +116,9 @@ button {
 }
 
 .depth {
-  background-color: var(--c-glass);
+  background-color: var(--c-depth);
   backdrop-filter: var(--p-blur);
-  color: var(--c-black);
+  color: #000;
 }
 
 .screen {
@@ -126,7 +127,7 @@ button {
 
 .fixed-bottom {
   position: fixed;
-  bottom: var(--s-unit);
+  bottom: 1rem;
   left: 50%;
   animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
 }
@@ -135,10 +136,12 @@ button {
   max-width: 58rem;
   padding: 1.6rem;
   border-radius: var(--s-dock);
+  background-color: var(--c-dark);
+  backdrop-filter: var(--p-blur);
 }
 
 .layer {
-  background-color: var(--c-primary);
+  background-color: var(--c-white);
 }
 
 .connect {
@@ -173,7 +176,7 @@ button {
   }
 
   .dock {
-    max-width: calc(100% - 1.6rem);
+    max-width: calc(100% - var(--s-medium));
   }
 
   .subtitle {
