--- a/src/components/Superellipse/SuperEllipse.css
+++ b/src/components/Superellipse/SuperEllipse.css
@@ -3,13 +3,13 @@
   height: var(--s-ellipse);
   position: relative;
   border-radius: 25%;
-  background-color: var(--c-white);
+  background-color: var(--c-glass);
   transition: transform 0.4s var(--a-press), background-color 0.25s;
 }
 
 .superellipse:hover,
 .active .superellipse {
-  background-color: var(--c-active);
+  background-color: var(--c-white);
 }
 
 a.active {
