--- a/src/pages/Products/Charts.css
+++ b/src/pages/Products/Charts.css
@@ -13,19 +13,32 @@
 
 circle {
   fill: none;
-  stroke-width: 0.5rem;
+  stroke-width: 0.52rem;
   cx: 50%;
   cy: 50%;
-  r: 15.915;
+  r: 15.914;
 }
 
 .graph-svg-tip.comparison .title {
   font-size: 1.8rem;
 }
 
+.widget-chart {
+  transition: filter 0.4s, transform 0.4s var(--a-press);
+}
+
+.widget-chart:hover {
+  transform: scale(1.02);
+  filter: var(--p-shadow);
+}
+
 @media screen and (max-width: 768px) {
   .widget-chart {
     grid-column: span 2;
+  }
+
+  .widget-chart:hover {
+    transform: scale(1.05);
   }
 
   .graph-svg-tip.comparison .title {
