--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,11 @@ button {
     background-color 0.25s, outline-offset 0.2s linear;
 }
 
+a:active,
+button:active {
+  transform: scale(0.94);
+}
+
 .btn {
   display: block;
   padding: 1.8rem var(--s-medium) 1.6rem;
@@ -13,10 +18,6 @@ button {
   font-size: 1.6rem;
   border-radius: var(--s-dock);
   text-align: center;
-}
-
-.btn:active {
-  transform: scale(0.94);
 }
 
 .btn:hover {
