--- a/src/pages/Products/Vault/Vault.css
+++ b/src/pages/Products/Vault/Vault.css
@@ -36,18 +36,17 @@ input:focus-visible {
 }
 
 .context {
+  display: grid;
+  grid-gap: 0.4rem;
   text-align: right;
 }
 
 .term {
-  color: var(--c-grey);
   font-size: var(--s-system);
-  margin-top: 0.2rem;
 }
 
 .sum {
   font-size: 2.8rem;
-  margin-bottom: 0.4rem;
 }
 
 .accrued {
@@ -60,13 +59,13 @@ input:focus-visible {
 }
 
 .form-control {
-  padding: 0.8rem var(--s-system);
+  padding: 0.9rem 1.2rem;
   font-size: 1.6rem;
 }
 
 .form-action {
   background-color: var(--c-action);
-  border-radius: 1.8rem;
+  border-radius: 1.2rem;
   border: 0;
 }
 
