--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ button {
 
 .fixed-bottom {
   position: fixed;
-  bottom: 1rem;
+  bottom: 1.2rem;
   left: 50%;
   animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
 }
@@ -184,7 +184,7 @@ button {
   }
 
   .dock {
-    max-width: calc(100% - var(--s-medium));
+    max-width: calc(100% - 2.4rem);
   }
 
   .subtitle {
