Describe chart contents

--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,7 +1,7 @@
 .products {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: var(--s-system);
+  grid-gap: 1.6rem;
 }
 
 .widget-title {
