--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -11,15 +11,16 @@
 .tour-list {
   font-size: 1.6rem;
   align-items: flex-start;
-  min-width: 18rem;
+  min-width: 16rem;
 }
 
-.tour-list li {
-  padding: 1rem 1.6rem;
-  transition: background-color 0.25s;
+.tour-list-item {
+  padding: 0.9rem 1.4rem;
+  font-size: inherit;
+  background-color: transparent;
 }
 
-.tour-list li:hover {
+.tour-list-item:hover {
   background-color: var(--c-active);
 }
 
@@ -31,7 +32,6 @@
   padding: 0.4rem 0.8rem;
   background-color: var(--c-active);
   border-radius: 1rem;
-  font-size: inherit;
 }
 
 .purple {
@@ -41,5 +41,9 @@
 @media screen and (max-width: 768px) {
   .home-stats {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .tour-list {
+    font-size: var(--s-system);
   }
 }
