--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
   --c-primary: #f5f5f7;
   --c-action: rgba(118, 118, 128, 0.22);
   --c-depth: rgba(245, 245, 245, 0.46);
-  --c-contrast: #151516;
   --c-ring: #0066cc;
   --c-grey: #a1a1a6;
   --c-heat: #fa124f;
@@ -40,6 +39,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: var(--s-system);
   background-color: var(--c-primary);
+  color: var(--c-black);
   min-height: 100vh;
   padding-bottom: 9.2rem;
 }
@@ -116,7 +116,6 @@ button {
 
 .view {
   padding: var(--s-medium);
-  color: var(--c-black);
 }
 
 .depth {
@@ -172,6 +171,11 @@ button {
 
 .grey {
   color: var(--c-grey);
+}
+
+.box {
+  background-color: var(--c-black);
+  color: var(--c-white);
 }
 
 @media screen and (max-width: 768px) {
