--- a/src/pages/Products/Charts.css
+++ b/src/pages/Products/Charts.css
@@ -1,3 +1,7 @@
+:root {
+  --s-chart-bar: 8;
+}
+
 .frappe-chart .x.axis .line-vertical {
   display: none;
 }
@@ -7,8 +11,8 @@
 }
 
 .frappe-chart .bar {
-  rx: 6;
-  ry: 6;
+  rx: var(--s-chart-bar);
+  ry: var(--s-chart-bar);
 }
 
 circle {
@@ -32,16 +36,25 @@ circle {
   filter: var(--p-shadow);
 }
 
+.chart-container .axis,
+.chart-container .chart-label {
+  fill: #636366;
+}
+
 @media screen and (max-width: 768px) {
   .widget-chart {
     grid-column: span 2;
   }
 
   .widget-chart:hover {
-    transform: scale(1.05);
+    transform: scale(1.06);
   }
 
   .graph-svg-tip.comparison .title {
     font-size: 1.6rem;
+  }
+
+  .frappe-chart .bar {
+    --s-chart-bar: 6;
   }
 }
