--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -35,6 +35,12 @@
   background-color: var(--c-ring);
 }
 
+.box-description {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  margin-top: 0.4rem;
+}
+
 .blue-theme {
   color: var(--c-ring);
 }
