Create stress test for redesign (#1)
* Create stress test for redesign

* Finally found a golden mean for monochrome

* Create enum for chart colors

* Update super ellipse styles and palette

* Improve interactions for home page

* Increase padding to improve safe area

* Describe chart contents

* Add more food data for health chart

* Remake promotions widget

* Rename news to leagues

* Replace news endpoint

* Create utils for store to randomize enum data

* Add league union

* Create tooltip and snackbar to finish release

* Sadly I haven't figured out where to add the face

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,16 @@
+:root {
+  --c-olive: #78b589;
+}
+
+.card {
+  background-color: var(--c-secondary);
+  color: var(--c-primary);
+}
+
 .card-text {
   display: block;
   font-size: 6.4rem;
+  color: var(--c-olive);
 }
 
 .card-measure {
@@ -9,13 +19,4 @@
 
 .card-sub {
   font-size: var(--s-medium);
-}
-
-.box {
-  background-color: var(--c-contrast);
-  color: var(--c-white);
-}
-
-.box-description {
-  font-size: 1.6rem;
 }
