--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,20 +1,12 @@
 .products {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: var(--s-system);
-}
-
-.widget {
-  transition: filter 0.4s, transform 0.4s var(--a-press);
-}
-
-.widget:hover {
-  transform: scale(1.02);
-  filter: var(--p-shadow);
+  grid-gap: 1.6rem;
 }
 
 .widget-title {
   font-size: 1.7rem;
+  margin-bottom: 0.2rem;
 }
 
 .widget-main {
@@ -26,10 +18,4 @@
   background-color: var(--c-active);
   padding: 0.7rem 0.7rem 0.3rem;
   border-radius: 50%;
-}
-
-@media screen and (max-width: 768px) {
-  .widget:hover {
-    transform: scale(1.05);
-  }
 }
