--- a/src/pages/Products/Vault/Vault.css
+++ b/src/pages/Products/Vault/Vault.css
@@ -1,14 +1,3 @@
-:root {
-  --c-heat: #fa124f;
-  --c-grey: rgba(235, 235, 245, 0.6);
-  --c-action: rgba(118, 118, 128, 0.2);
-}
-
-.vault {
-  background-color: var(--c-black);
-  color: var(--c-white);
-}
-
 .activity {
   height: 8rem;
   width: 8rem;
@@ -30,35 +19,27 @@
 }
 
 input:focus-visible {
-  outline: 1px solid var(--c-ring);
+  outline: 2px solid var(--c-ring);
   outline-offset: 4px;
 }
 
 .conditions {
   margin-top: 1.6rem;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-gap: var(--s-medium);
 }
 
 .context {
-  grid-column: span 2;
-  text-align: left;
+  display: grid;
+  grid-gap: 0.4rem;
+  text-align: right;
 }
 
 .term {
-  color: var(--c-grey);
-  font-size: var(--s-system);
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+  font-size: 1.5rem;
+  line-height: var(--s-medium);
 }
 
 .sum {
   font-size: 2.8rem;
-  margin-top: 0.4rem;
-  align-items: baseline;
-  flex-wrap: wrap;
 }
 
 .accrued {
@@ -71,13 +52,13 @@ input:focus-visible {
 }
 
 .form-control {
-  padding: 0.8rem var(--s-system);
+  padding: 0.9rem 1.2rem;
   font-size: 1.6rem;
 }
 
 .form-action {
   background-color: var(--c-action);
-  border-radius: 1.8rem;
+  border-radius: 1.2rem;
   border: 0;
 }
 
@@ -88,7 +69,7 @@ input:focus-visible {
 }
 
 @media screen and (max-width: 768px) {
-  .conditions {
-    grid-template-columns: repeat(1, 1fr);
+  .sum {
+    font-size: 1.8rem;
   }
 }
