Add circles for line chart to improve a11y

--- a/src/pages/Products/Vault/Vault.css
+++ b/src/pages/Products/Vault/Vault.css
@@ -8,6 +8,11 @@
   transform: scale(1) rotate(-90deg);
 }
 
+.ring circle {
+  fill: none;
+  stroke-width: 0.52rem;
+}
+
 .completed {
   animation: progress 1s ease-in-out forwards;
   stroke-linecap: round;
