--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -3,13 +3,17 @@
 }
 
 .loader {
-  background-color: var(--c-black);
+  text-align: center;
   height: var(--s-ellipse);
-  margin: var(--s-medium) 0;
+  margin: var(--s-system) 0 var(--s-medium);
 }
 
 .skeleton {
   width: var(--s-ellipse);
+}
+
+.spinner {
+  height: 1.8rem;
 }
 
 @keyframes pulse {
